Refactor storage classes to be records, add functional WebApiHandler and Star Fetchers Leaderboard data along with unformatted CLI.